[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/boat.gd" type="Script" id=1]

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
background_mode = 2
background_sky = SubResource( 1 )
glow_enabled = true

[sub_resource type="PlaneMesh" id=5]
size = Vector2( 1000, 1000 )

[sub_resource type="SpatialMaterial" id=6]
flags_transparent = true
vertex_color_use_as_albedo = true
albedo_color = Color( 0.00392157, 0.929412, 1, 0.498039 )

[sub_resource type="BoxShape" id=3]
extents = Vector3( 2, 0.5, 4 )

[sub_resource type="CubeMesh" id=4]
size = Vector3( 4, 1, 8 )

[sub_resource type="SphereMesh" id=8]

[sub_resource type="SphereMesh" id=7]

[node name="Spatial" type="Spatial"]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Water" type="MeshInstance" parent="."]
mesh = SubResource( 5 )
material/0 = SubResource( 6 )

[node name="RigidBody" type="RigidBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0 )
linear_damp = 1.0
angular_damp = 2.0
script = ExtResource( 1 )

[node name="CollisionShape" type="CollisionShape" parent="RigidBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody"]
mesh = SubResource( 4 )
material/0 = null

[node name="H" type="Spatial" parent="RigidBody"]

[node name="V" type="Spatial" parent="RigidBody/H"]

[node name="Camera" type="Camera" parent="RigidBody/H/V"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.623, 8.581 )

[node name="Floaty" type="Position3D" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.30275, 0, -4.41811 )

[node name="MeshInstance" type="MeshInstance" parent="RigidBody/Floaty"]
mesh = SubResource( 8 )
material/0 = null

[node name="Floaty2" type="Position3D" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.69725, 0, -4.41811 )

[node name="MeshInstance2" type="MeshInstance" parent="RigidBody/Floaty2"]
mesh = SubResource( 8 )
material/0 = null

[node name="Floaty3" type="Position3D" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -2.69725, 0, 4.58189 )

[node name="MeshInstance3" type="MeshInstance" parent="RigidBody/Floaty3"]
mesh = SubResource( 8 )
material/0 = null

[node name="Floaty4" type="Position3D" parent="RigidBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.30275, 0, 4.58189 )

[node name="MeshInstance4" type="MeshInstance" parent="RigidBody/Floaty4"]
mesh = SubResource( 8 )
material/0 = null

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, -14 )
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 26 )
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance4" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 26 )
mesh = SubResource( 7 )
material/0 = null

[node name="MeshInstance2" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 12, 0, 5 )
mesh = SubResource( 7 )
material/0 = null
